--- a/public/stylesheets/sass/_global-styles.scss
+++ b/public/stylesheets/sass/_global-styles.scss
@@ -2,25 +2,35 @@ body {
     //background-color: rgba(244,241,234,0.5);
     //color: #333333;
     //-> color: #3A3A30;
-    color: #003366;
     font-family: 'Merriweather', serif;
-    font-size: 16px;
-    line-height: 1.6;
-    letter-spacing: 0.75px;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #003366;
+    margin-bottom: 1rem;
 }
 
-// Utils
-
-.fw-600 {
-    font-weight: 600;
-}
+// Typography
+// (Bootstrap 5 defaults: h1 => 2.5rem, h2 => 2rem, h3 => 1.75rem, h4 (Page heading) => 1.5rem, h5 (Section headings..see if 1.375rem is needed)=> 1.25rem, h6 (Normal size heading) => 1rem)
+// ..use fw-bold for font-weight: 700;
 
 h1, h2, h3, h4, h5, h6 {
-    color: inherit;
-    font-weight: 600;
-    line-height: 1.5;
-    margin-bottom: 1.5rem;
+    //color: inherit;
+    font-weight: 700;
 }
+
+.fs-7 {
+  font-size: 0.875rem;
+}
+
+.fs-8 {
+  font-size: 0.75rem;
+}
+
+.fs-18 {
+  font-size: 1.125rem;
+}
+
+// Other
 
 .container-fluid {
     padding-left: 16px;
@@ -50,9 +60,6 @@ a:hover {
 }
 
 label {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 18px;
     margin-bottom: 8px;
 }
 
@@ -60,8 +67,6 @@ label {
 input, select {
     color: #3A3A30;
     letter-spacing: 0.75px;
-    font-size: 16px;
-    line-height: 20px;
     border: 1px solid rgba(87, 79, 107, .25);
     box-shadow: 0px 3px 8px rgba(49, 49, 49, .1);
     border-radius: 5px;
@@ -83,15 +88,8 @@ textarea {
     border: 1px solid rgba(87, 79, 107, 0.25) !important;
     box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.08) !important;
     border-radius: 15px !important;
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 22.5px;
     padding-left: 26px;
     padding-top: 14px;
-    @include md-and-up {
-        font-size: 18px;
-        line-height: 27px;
-    }
 
     &::placeholder {
         color: rgba(147, 142, 160);
@@ -120,15 +118,11 @@ li {
         font-family: "Font Awesome 5 Free";
         font-weight: 900;
         color: #ffd700;
-        font-size: 18px;
         margin-right: 15px;
     }
 }
 
 .logo {
-    font-size: 32px;
-    font-weight: 700;
-
     &--ra {
         color: #003366;
     }
@@ -145,9 +139,6 @@ li {
     padding-top: 12px;
     padding-bottom: 12px;
     border-radius: 5px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.5;
     border: 1px solid transparent;
 }
 
@@ -163,8 +154,6 @@ li {
 }
 
 .button, .btn {
-    font-size: 16px;
-    font-weight: 600;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, .2509803922);
     border-radius: 31.5px;
     border: none;
@@ -271,7 +260,6 @@ li {
 .accordion-plus-minus {
     .accordion-button {
         position: relative;
-        font-size: 18px;
         color: #003366;
         background: #FFF9DB;
         box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.15);
@@ -342,7 +330,6 @@ li {
     &--circle {
         color: #f7f7f7;
         //color: #fff4d1;
-        font-size: 40px;
         //border: 2px solid #003366;
         border-radius: 50%;
         cursor: pointer;
@@ -357,7 +344,6 @@ li {
 
     &--icon {
         color: #003366;
-        font-size: 22px;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -367,7 +353,6 @@ li {
 
 .icon-label {
     display: block;
-    font-size: 0.75rem;
     color: #003366;
     text-align: center;
     margin-top: 5px;
@@ -391,7 +376,6 @@ li {
     }
 
     &--icon {
-        font-size: 22px;
         margin-bottom: 6px;
         @include md-and-up {
             margin-bottom: 0;
@@ -399,13 +383,7 @@ li {
     }
 
     &--icon-text {
-        font-size: 12px;
-        font-weight: 700;
-        line-height: 14px;
         display: block;
-        @include md-and-up {
-            font-size: 14px;
-        }
     }
 
     .active {
@@ -500,10 +478,6 @@ li {
 
     .modal-content {
         border-radius: 35px 35px 0px 0px;
-    }
-
-    a, i {
-        font-size: 14px;
     }
 }
 
